--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ repositories {
 }
 
 dependencies {
+    // Apache logging framework
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
+    annotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
     implementation group: 'com.github.twitch4j', name: 'twitch4j', version: '1.14.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
