--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-exec', version: '1.3'
     implementation group: 'com.github.twitch4j', name: 'twitch4j', version: '1.14.0'
     // Testing
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.2'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.2'
 }
 
 test {
